Add missing permgen settings for windows build - fix passed on by Greg Allen
Fix up timezone building to reflect new location of timezone data